Fix `CompilerMojo#getSourceInclusionScanner(String)` illogical `addAll` (#243)
Co-authored-by: Guillaume Nodet <gnodet@gmail.com>